--- a/app/header.sass
+++ b/app/header.sass
@@ -38,6 +38,8 @@
             &.active, &:hover
                 i, .fa
                     color: #ffffff
+        .exit-button
+            margin-right: -7px
         .notification
             i, .fa
                 color: $green-color
@@ -308,15 +310,12 @@
             a
                 color: $accent-color
 
-
     .search-form
         width: 280px
         position: absolute
         z-index: 10
         right: 20px
         margin: 10px 0 0 0
-        .input-group
-            margin-bottom: 0
         input, button
             border: none
             background: none
@@ -330,7 +329,6 @@
             font-size: em(18px)
             box-shadow: none
             padding: 0 10px 0 2px
-            cursor: pointer
             &:hover, &:focus, &:active,
             &:hover ~ button, &:focus ~ button, &:active ~ button
                 opacity: 1
@@ -344,6 +342,23 @@
             i, .fa
                 font-size: 30px
 
+// Search
+.search-form
+    .input-group
+        margin-bottom: 10px
+    input
+        height: 40px
+        font-size: em(18px)
+        cursor: pointer
+        //&:hover, &:focus, &:active,
+        //&:hover ~ button, &:focus ~ button, &:active ~ button
+        //
+        //&:focus
+    button
+        height: 40px
+        i, .fa
+            //font-size: 30px
+
 // mobile menu
 #menu
     display: none
@@ -352,13 +367,15 @@
     button
         display: inline-block
         width: 100%
-        margin-bottom: 10px
+        margin-bottom: 15px
+        padding: 0
         *
-            float: left
+            float: right
             line-height: 32px
             color: $gray-color
         i, .fa
             margin: 0 0 0 10px
+            width: 32px
 
 // End Main Menu
 
