--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -24,8 +24,6 @@
             li
                 font-size: 14px
     #header
-        //.logo
-        //    margin: 20px 0
         h1
             margin-top: 23px
             font-size: em(26px)
@@ -71,6 +69,10 @@
     .align-center-sm
         text-align: center
 
+    /* Header */
+    #header
+        margin-bottom: 0
+
     /* Footer */
     footer
         .first-column,
@@ -89,6 +91,14 @@
     .align-center-xs
         text-align: center
 
+    /* Header */
+    #header
+        h1
+            margin-top: 20px
+            font-size: em(24px)
+            .slogan
+                font-size: 0.50em
+
     // Mobile menu button
     .mobile-buttons-menu
         button
@@ -97,11 +107,45 @@
             i, .fa
                 margin: 0
 
+    /* Content */
+    .table-block.page-title
+        .responsive-block
+            display: inline-block
+            width: 100%
+        .fixed-block
+            display: inline-block
+            width: auto
+
     /* Footer */
     footer
         .copyright
             font-size: 12px
     /* */
+
+/* Small Devices, Tablets - XS - для 609 и менее */
+@media only screen and (max-width : 609px)
+    /* Header */
+    #header
+        .col-logo
+            width: 85%
+        .col-title
+            width: 100%
+            text-align: center
+            display: none
+        .col-menu-button
+            width: 15%
+            position: absolute
+            top: 65px
+            right: 0
+        .logo
+            margin: 15px 0
+        h1
+            float: none
+            margin-top: 0
+            max-width: 300px
+        .mobile-buttons-menu
+            margin-top: 0
+/* */
 
 /* Extra Small Devices, Phones - XS - для 480 и менее */
 @media only screen and (max-width : 480px)
@@ -123,23 +167,6 @@
                         i, .fa
                             &:after
                                 right: 10px
-    #header
-        .logo
-            margin: 10px 0
-        h1
-            margin: 0
-            font-size: 28px
-            width: 240px
-            .slogan
-                font-size: 14px
-                margin-top: 5px
-        .social-links
-            margin: 20px 0
-
-    // Mobile menu button
-    .mobile-buttons-menu
-        button
-            margin-top: 3px
 
     /* Footer */
     footer
