Адаптивность шапки, футера (доделано). Адаптивность колонки. Адаптивность шрифтов (проверить).

--- a/app/header.sass
+++ b/app/header.sass
@@ -174,9 +174,9 @@
                         width: 100%
                     .small-text
                         color: $gray-color
-                        font-size: 10px
+                        font-size: em(11px)
                     .text
-                        font-size: 12px
+                        font-size: em(14px)
                 &.letters-list
                     a
                         &:first-child
