--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -121,6 +121,7 @@ body
                 i, .fa
                     color: $accent-color
         .item
+            position: relative
             display: inline-block
             float: left
             width: 100%
