--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -183,6 +183,7 @@ ul.horisontal
 // Text
 .fixed-right         // parent container must has "position: relative"
     position: absolute
+    top: -10px
     right: 0
 .fixed-left          // parent container must has "position: relative"
     position: absolute
