--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -6,6 +6,7 @@ $title-font: "RobotoCondensed", sans-serif
 $accent-color: #0095d8
 $accent-color-dark: #0079bf
 
+$light-color: #f9f9f9
 $dark-color: #273849
 $gray-color: #9a9da0 // #929597
 $dark-gray-color: #757a7f // #808080
