--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6,
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6
     margin: 0 0 20px
-    line-height: 1
+    line-height: 1.15
     font-weight: 400
 
 h1, .h1
@@ -280,7 +280,7 @@ section
     color: #ffffff
 
 .white-section
-    background: #f9f9f9
+    background: $light-color
 
 // Delimiter
 .delimiter
