--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -37,7 +37,9 @@ body, #panel
 body
 	font-family: $default-font
 	font-size: 16px
-	line-height: 1.5
+    font-weight: 400
+    font-style: normal
+    line-height: 1.5
 	min-width: 320px
 	position: relative
 	overflow-x: hidden
@@ -210,7 +212,7 @@ p
 
 .help-text
     color: $dark-gray-color
-    font-size: 14px
+    font-size: em(14px)
 .info
     color: $accent-color !important
 .success
@@ -238,7 +240,6 @@ img, .image
 i, .fa
     color: $gray-color
     margin-right: 7px
-    &.pull-right
     &.pull-right
         margin-right: 0
         margin-left: 7px
