Адаптивность статей в блоге (информация о статье, "читать далее").

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -252,6 +252,8 @@ i:only-child, .fa:only-child
 // Margins and Paddings
 .m-t-20
     margin-top: 20px
+.m-b-10
+    margin-bottom: 10px
 .m-b-20
     margin-bottom: 20px
 .m-b-30
