--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -71,9 +71,8 @@
     /* Content */
     .blog
         .item
-            .item-title
-                float: none
-                width: 100%
+            .item-image
+                margin-right: 20px
 
     .pagination
         li
@@ -121,8 +120,7 @@
     .blog
         .item
             .item-title
-                float: right
-                width: 65%
+                width: 100%
 
     /* Footer */
     footer
@@ -174,10 +172,6 @@
         .item
             .item-image
                 width: calc(50% - 20px)
-                margin-right: 20px
-            .item-title
-                float: none
-                width: 100%
             .item-text
                 width: 50%
 
@@ -246,14 +240,13 @@
     /* Content */
     .blog
         .item
-            .item-title
-                font-size: 24px
-            .item-image,
+            .item-image
+                width: 100%
+                img
+                    width: 100%
             .item-text
                 width: 100%
                 height: auto !important
-                img
-                    width: 100%
             .read-more
                 bottom: 20px
 
