--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -123,6 +123,7 @@ button::-moz-focus-inner
     display: inline-block
     text-decoration: none
     padding: 6px 15px
+    line-height: 24px
     text-align: center
     border-radius: 2px
     border: 1px solid rgba(255, 255, 255, 0.15)
@@ -287,6 +288,7 @@ section
 
 // Delimiter
 .delimiter
+    position: relative
     border-top: 1px solid #eeeeee
     border-bottom: 1px solid #ffffff
     display: inline-block
@@ -294,6 +296,34 @@ section
     width: 100%
     &.delimiter-2x
         border-width: 2px
+    &.delimiter-dashed
+        border-top: none
+        border-bottom: 1px dashed #c4c7ca
+    .link
+        position: absolute
+        left: 50%
+        > a
+            position: relative
+            display: inline-block
+            left: -50%
+            top: -15px
+            background: $light-color
+            line-height: 20px
+            padding: 4px 12px
+            border-radius: 15px
+            border: 1px solid #c4c7ca
+            text-decoration: none
+            color: $dark-gray-color
+            white-space: nowrap
+            > span
+                text-decoration: none
+                font-size: em(14px)
+            > i, .fa
+                position: relative
+                top: 1px
+                margin: 0
+            &:hover
+                color: $accent-color
 
 // Menus
 .menu
