Страницы категории и отдельной страницы.

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -274,6 +274,15 @@ i:only-child, .fa:only-child
 .p-r-25
     padding-right: 25px
 
+.indent
+    margin-bottom: 20px
+    display: inline-block
+    width: 100%
+    &.indent-lg
+        display: inline-block
+    &.indent-xs, &.indent-sm, &.indent-md
+        display: none
+
 // Sections
 section
     display: inline-block
