--- a/app/sass/fonts.sass
+++ b/app/sass/fonts.sass
@@ -2,8 +2,8 @@
 
 +font-face("RobotoCondensed", "../fonts/RobotoCondensedRegular/RobotoCondensedRegular", $file-formats: eot woff ttf)
 
-+font-face("FiraSans", "../fonts/FiraSansRegular/FiraSansRegular", normal, normal, $file-formats: eot woff ttf)
-+font-face("FiraSans", "../fonts/FiraSansItalic/FiraSansItalic", normal, italic, $file-formats: woff woff2 ttf)
++font-face("FiraSans", "../fonts/FiraSansRegular/FiraSansRegular", $file-formats: eot woff ttf)
++font-face("FiraSans", "../fonts/FiraSansItalic/FiraSansItalic", italic, $file-formats: woff woff ttf)
 +font-face("FiraSans", "../fonts/FiraSansBold/FiraSansBold", bold, $file-formats: eot woff ttf)
 +font-face("FiraSans", "../fonts/FiraSansBoldItalic/FiraSansBoldItalic", bold, italic, $file-formats: eot woff ttf)
 
