--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -37,12 +37,13 @@ body, #panel
 body
 	font-family: $default-font
 	font-size: 16px
-    font-weight: 400
-    font-style: normal
-    line-height: 1.5
 	min-width: 320px
 	position: relative
 	overflow-x: hidden
+body
+    font-weight: 400
+    font-style: normal
+    line-height: 1.5
 
 .container-fluid
     max-width: 1600px
@@ -208,6 +209,9 @@ p
 
 .text // all text
     text-align: left
+    i, em
+        color: #333333
+
 //.sidebar .text // all text
 //    text-align: left
 
