--- a/app/sass/fonts.sass
+++ b/app/sass/fonts.sass
@@ -2,12 +2,7 @@
 
 +font-face("RobotoCondensed", "../fonts/RobotoCondensedRegular/RobotoCondensedRegular", $file-formats: eot woff ttf)
 
-+font-face("FiraSans", "../fonts/FiraSansRegular/FiraSansRegular", $file-formats: eot woff ttf)
-+font-face("FiraSans", "../fonts/FiraSansItalic/FiraSansItalic", italic, $file-formats: woff woff ttf)
-+font-face("FiraSans", "../fonts/FiraSansBold/FiraSansBold", bold, $file-formats: eot woff ttf)
-+font-face("FiraSans", "../fonts/FiraSansBoldItalic/FiraSansBoldItalic", bold, italic, $file-formats: eot woff ttf)
-
-//+font-face("OpenSans", "../fonts/OpenSansRegular/OpenSansRegular", $file-formats: eot woff ttf)
-//+font-face("OpenSans", "../fonts/OpenSansRegularItalic/opensansitalic", italic, $file-formats: woff woff2 ttf)
-//+font-face("OpenSans", "../fonts/OpenSansBold/OpenSansBold", bold, $file-formats: eot woff ttf)
-//+font-face("OpenSans", "../fonts/OpenSansBoldItalic/OpenSansBoldItalic", bold, italic, $file-formats: eot woff ttf)
++font-face("Helvetica", "../fonts/Helvetica/HelveticaRegular/HelveticaRegular", 400, normal, $file-formats: eot woff ttf)
++font-face("Helvetica", "../fonts/Helvetica/HelveticaItalic/HelveticaItalic", 400, italic, $file-formats: eot woff ttf)
++font-face("Helvetica", "../fonts/Helvetica/HelveticaBold/HelveticaBold", bold, normal, $file-formats: eot woff ttf)
++font-face("Helvetica", "../fonts/Helvetica/HelveticaBoldItalic/HelveticaBoldItalic", bold, italic, $file-formats: eot woff ttf)
