--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,6 @@
 @import "bourbon"
 
-$default-font: "Helvetica", serif
+$default-font: "Helvetica", sans-serif
 $title-font: "RobotoCondensed", sans-serif
 
 $accent-color: #0095d8
