Страницы сайта: ссылки в меню (вопрос, вопросы, категория, страница).

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -359,6 +359,7 @@ body
             margin-right: 7px
     i, .fa
         font-size: 20px
+        color: $gray-color !important
     i, img, a, time, span
         float: left
         line-height: 22px
