--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -412,7 +412,9 @@ body
     .tags
         display: inline-block
     #social-buttons-widget
-        margin-bottom: 20px
+        margin-bottom: 10px
+        li
+            margin-bottom: 10px
 
 // Blog List
 
